manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: model-validation-controller
