manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-validation-controller
  namespace: model-validation-controller
  labels:
    app: model-validation-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-validation-controller
  template:
    metadata:
      labels:
        app: model-validation-controller
    spec:
      serviceAccountName: model-validation-controller-sa
      containers:
      - name: model-validation-controller
        image: ghcr.io/miyunari/model-validation-controller:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tls
          mountPath: "/etc/admission-webhook/tls"
      volumes:
      - name: tls
        secret:
          secretName: example-webhook-tls
