manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: model-validation-controller
spec:
  selector:
    app: model-validation-controller
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8080
  type: ClusterIP
