manifests/mutation_webhook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pods.model-validation.rhtas.redhat.com
  annotations:
    # OpenShift annotation to request certificate provisioning for the webhook
    admission.k8s.io/webhook-cert-provisioner: "true"
webhooks:
- admissionReviewVersions:
    - v1
  name: "pods.model-validation.rhtas.redhat.com"
  clientConfig:
    service:
      name: model-validation-controller
      namespace: model-validation-controller
      path: /webhook
      port: 443
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkRENDQWx5Z0F3SUJBZ0lVQ0tGV09KOTJjRjlOVzhJWWxtUktKRWJDRnpNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1VqRUxNQWtHQTFVRUJoTUNRVlV4RURBT0JnTlZCQWdUQjBWNFlXMXdiR1V4RWpBUUJnTlZCQWNUQ1UxbApiR0p2ZFhKdVpURVFNQTRHQTFVRUNoTUhSWGhoYlhCc1pURUxNQWtHQTFVRUN4TUNRMEV3SGhjTk1qVXdNVEU0Ck1qQXhOekF3V2hjTk16QXdNVEUzTWpBeE56QXdXakJTTVFzd0NRWURWUVFHRXdKQlZURVFNQTRHQTFVRUNCTUgKUlhoaGJYQnNaVEVTTUJBR0ExVUVCeE1KVFdWc1ltOTFjbTVsTVJBd0RnWURWUVFLRXdkRmVHRnRjR3hsTVFzdwpDUVlEVlFRTEV3S [...]
  failurePolicy: Fail
  matchPolicy: Equivalent
  timeoutSeconds: 10
  rules:
    - apiGroups:
        - ""
      apiVersions:
        - v1
      resources:
        - pods
      operations:
        - CREATE
        - UPDATE
  sideEffects: None
  objectSelector:
    matchExpressions:
      - key: "validation.rhtas.redhat.com/ml"
        operator: Exists
